[package]
name = "capycoin"
version = "0.1.0"
edition = "2021"
default-run = "core"

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
bcrypt = "0.13.0"
rouille = "3.5.0"
lazy_static = "1.4.0"

[dependencies.nix]
version = "0.24.2"
features = [
    "socket",
]

[dependencies.ctrlc]
version = "3.2.2"
features = [
    "termination",
]

[dependencies.rusqlite]
version = "0.27.0"
features = [
    "uuid",
    "time",
]

[dependencies.time]
version = "0.3.11"
features = [
    "macros",
    "serde",
    "serde-well-known",
]

[dependencies.uuid]
version = "0.8"  # Matches UUID for `rusqlite`
features = [
    "v4",                # Lets you generate random UUIDs
    "serde",
]
